--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
+beautifulsoup4==4.9.3
+certifi==2021.5.30
+charset-normalizer==2.0.4
 colorama==0.4.4
+idna==3.2
+requests==2.26.0
 six==1.16.0
+soupsieve==2.2.1
 trueskill==0.4.5
+urllib3==1.26.6
